# skiabuild

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: build_containers.yml  skiabuild.yml
configs/: skia-macos_defconfig  skia-wasm_defconfig  skia-win_x64_defconfig  skia_defconfig
docker/skiabuild/: Dockerfile  devenv.Dockerfile  docker-compose.yml  entrypoint.sh  skiatest-archlinux.Dockerfile  skiatest-debian.Dockerfile  userentry.sh  wasm.Dockerfile
libavalonia.skia/: CMakeLists.txt  libavalonia.skia.version  meson.build
pre-built/v0.1.1/x86_64-linux-gnu/: libavalonia.skia.lddtree  libavalonia.skia.symbols
pre-built/v0.1.1/x86_64-linux-gnu/usr/local/lib64/pkgconfig/: skia.pc
recipes/skia/: recipe.mk  skia-config-linux.mk  skia-config-macos.mk  skia-config-wasm.mk  skia-config-windows.mk
recipes/skia/layers/: avalonia_skia.mk  cmake.toolchain.in  fontconfig.mk  freetype.mk  harfbuzz.mk  prepare.mk  skia.mk  skia.pc.in
test/: meson.build  testlib.cpp  testprog.c
